[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "certumalink-nppes-importer"
version = "0.1.0"
description = "Import public CMS NPPES physician records by ZIP for Certumalink seed exports."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
certumalink-nppes = "certumalink_importer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

